# hayate

./: .gitignore  CLAUDE.md  Cargo.toml  HASKELL-CONSENSUS-COMPARISON.md  INCIDENT-2026-03-02-missing-sstables.md  README.md  REWARDS_ARCHITECTURE.md  build.rs  claude.md  flake.nix  hayate.toml  justfile  run-live-tests.sh  test-ledger-state.json  token-test.toml
benches/: api_benchmarks.rs  disk_benchmarks.rs  storage_benchmarks.rs
docs/: plutus-transactions.md  plutus-v3-script-hash-investigation.md
examples/: check_wallet_utxos.rs  deploy_governance_sanchonet.rs  deploy_plutus_contract.rs  minimal_sync.rs  query_protocol_params.rs  rotate_council.rs  show_account_xvk.rs  test_enterprise_address.rs  test_native_mint.rs  unified_tx_deploy_contract.rs  unified_tx_mint.rs  unified_tx_offline.rs  unified_tx_simple.rs  verify_derivation.rs
flake/nixosModules/: service-hayate.nix
perSystem/: devShells.nix  packages.nix
proto/utxorpc/: query.proto  submit.proto  watch.proto
scripts/: debug-grpc.sh
src/: chain_sync.rs  cli.rs  config.rs  gpg.rs  keys.rs  lib.rs  main.rs  mock_types.rs  protocol_params.rs  rewards.rs  rewards_calculation.rs  snapshot_manager.rs  wallet.rs  wallet_stats.rs
src/api/: mod.rs  query.rs  submit.rs  watch.rs
src/indexer/: block_processor.rs  block_walker.rs  mod.rs  storage_manager.rs
src/node/: main.rs  mod.rs  protocol_query.rs  storage.rs  txsubmit.rs
src/storage/: chain_db.rs  immutable.rs  mod.rs  volatile.rs
src/wallet/: cli.rs  derivation.rs  mnemonic.rs  mod.rs  simulator.rs  storage.rs  test_validators.rs  transaction.rs  utxorpc_client.rs  wallet.rs
src/wallet/plutus/: address.rs  cost_models.rs  datum.rs  mod.rs  oneshot.rs  redeemer.rs  script.rs
src/wallet/tx_builder/: builder.rs  mod.rs  types.rs
src/wallet/unified_tx/: builder.rs  error.rs  mod.rs  types.rs
test-validators/: README.md  aiken.toml  plutus.json
test-validators/validators/: always_true.ak  check_42.ak  match_datum.ak
tests/: README.md  api_query_tests.rs  api_tests.rs  block_processor_tests.rs  chain_sync_tests.rs  cli_tests.rs  config_tests.rs  e2e_integration_tests.rs  fault_injection_tests.rs  integration_tests.rs  live_integration_tests.rs  midnight_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  query_service_tests.rs  resource_exhaustion_tests.rs  restart_recovery_tests.rs  rewards_tracker_tests.rs  sanchonet.toml  simulator_test.rs  snapshot_manager_tests.rs  storage_manager_tests.rs  unit_tests.rs
tests/common/: fixtures.rs  mod.rs
tests/fixtures/preview/: test_data.json
tests/fixtures/sanchonet/: test_data.json
tests/integration/: main.rs  utxorpc_tests.rs
