[package]
name = "hayate"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Leathers <samuel.leathers@iohk.io>"]
license = "Apache-2.0"
description = "Hayate (疾風) - Swift Cardano indexer with UTxORPC API"
repository = "https://github.com/yourusername/hayate"
keywords = ["cardano", "blockchain", "indexer", "utxorpc"]
categories = ["database", "cryptography::cryptocurrencies"]

[[bin]]
name = "hayate"
path = "src/main.rs"

[[bin]]
name = "hayate-node"
path = "src/node/main.rs"

[dependencies]
# LSM storage engine (local path)
cardano-lsm = { path = "../cardano-lsm-rust" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# gRPC / UTxORPC
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cardano libraries
pallas-network = "0.35.0"
pallas-traverse = "0.35.0"
pallas-crypto = "0.35.0"
pallas-addresses = "0.35.0"
pallas-configs = "0.35.0"
pallas = "0.35.0"
pallas-codec = "0.35.0"
pallas-primitives = "0.35.0"

# Crypto and key derivation
bip39 = "2"
ed25519-bip32 = "0.4"
cryptoxide = "0.4"
minicbor = "0.25"
bech32 = "0.11"
rand = "0.8"

# Utilities
hex = "0.4"
futures-util = "0.3"
futures-executor = "0.3"
crc32fast = "1.4"

# Exact arithmetic for rewards calculation
num-rational = "0.4"
num-traits = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "api_benchmarks"
harness = false

[[bench]]
name = "disk_benchmarks"
harness = false
